Fix Tailwind CSS configuration for v3 compatibility

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "15.1.4",
-    "next-intl": "^3.23.0",
+    "next": "^15.1.4",
+    "next-intl": "^3.23.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
